--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -14,8 +14,6 @@
 }
 
 
-/* LISTA OBIECTIVE */
-
 .label-set{
     background: #C53030;
     font-size: 20px;
@@ -39,25 +37,30 @@
     margin-bottom: 2px;
 }
 
-.label{
-    background: #ae5f75;
-    height: 69px;
-    width: 100%;
+/* LISTA OBIECTIVE */
+
+label{
+    background: #ED8936;
+    height: 50px;
+    width: 25%;
     display: block;
-    border-bottom: 1px solid #2C3E50;
+    border: 2px solid #2C3E50;
+    margin: 0 auto;
+    text-align: center;
     color: #fff;
     text-transform: capitalize;
-    font-weight: 900;
-    font-size: 11px;
+    font-weight: 800;
     letter-spacing: 1px;
     text-indent: 20px;
     cursor: pointer;
     transition: all 0.7s ease;
     position: relative;
     padding: 5px;
+    padding-top: 8px;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
+    margin-bottom: 2px;
 }
 
 label:before{
