--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -40,7 +40,7 @@
 /* LISTA OBIECTIVE */
 
 label{
-    background: #ED8936;
+    background: #FD4900;
     height: 50px;
     width: 25%;
     display: block;
@@ -76,15 +76,25 @@ label:before{
     transition: border 0.7s ease
 }
 
+.checked {
+    background: #DC0000;
+    border-bottom: 1px solid #34495E;
+    color: white;
+}
+
 input[type=checkbox] {
     display: none;
+}
+
+.inputChecked::before{
+    background: url("https://i.imgur.com/eoPQ05r.png") no-repeat center center;
 }
 /* LISTA OBIECTIVE */
 
 
 /* TIMER */
 .container {
-    color: #ED8936;
+    color: #FF3F40;
     margin: 0 auto;
     text-align: center;
     font-size: 20px;
@@ -109,3 +119,23 @@ li span {
     font-size: 4.5rem;
 }
 /* TIMER */
+.list{
+    margin-top: 4px;
+}
+
+.button{
+    display: none;
+    cursor: pointer;
+}
+
+.list:hover{
+    opacity: 1;
+}
+
+.list:hover .button{
+    display: flex;
+    opacity: 1;
+    justify-content: space-around;
+    margin: 0 auto;
+    width: 30%;
+}
